@startuml

interface Collider
interface Entiy
interface EntityLoader
abstract BaseLoader

BaseLoader --|> EnityLoader
BasePipeLoader --|> BaseLoader
BlockLoader --|> BaseLoader
BrickLoader --|> BaseLoader
BuzzyBeetleLoader --|> BaseLoader
CastleLoader --|> BaseLoader
CoinLoader --|> BaseLoader
ConfigurationBlockLoader --|> BaseLoader
EmptyBlockLoader --|> BaseLoader
FireFlowerLoader --|> BaseLoader
FlagPoleLoader --|> BaseLoader
GoombaLoader --|> BaseLoader
GreenMushroomLoader --|> BaseLoader
KoopaTroopaLoader --|> BaseLoader
LakituLoader --|> BaseLoader
MarioLoader --|> BaseLoader
PiranhaPlantLoader --|> BaseLoader
QuestionBlockLoader --|> BaseLoader
SpinyLoader --|> BaseLoader
StarLoader --|> BaseLoader
SuperMushroomLoader --|> BaseLoader
TopPipeLoader --|> BaseLoader
@enduml